# C-web-server

./: .gitignore  CMakeLists.txt  README.md
go-demo/: .gitignore  main.go
src/: CMakeLists.txt  connection.c  connection.h  handler.c  handler.h  http_parser.c  http_parser.h  http_response.c  http_response.h  main.c  parsing.c  parsing.h  readfiles.c  readfiles.h
test/: CMakeLists.txt  test_parsing.c  test_readfiles.c
